--- a/react/bluekart/src/App.css
+++ b/react/bluekart/src/App.css
@@ -70,19 +70,19 @@ body{
   border: 1px solid black;
 }
 .product-img{
-  width: 250px;
+  width: 400px;
   height: 250px;
   object-fit:fill;
-  margin-left: 17px;
+  margin-left: 25px;
 }
 .product-div{
-  border: 1px solid rgb(207, 56, 56);
+  border: 1px solid rgb(255, 219, 219);
   border-radius: 5px;
-  background-color: black;
+  background-color: lightblue;
 }
 .product-details{
   border-top: 1px solid gray;
-  color: aliceblue;
+  color: rgb(0, 0, 0);
 }
 .product-div:hover{
   box-shadow: 0px 0px 10px darkgrey;
@@ -93,4 +93,23 @@ body{
 }
 .product-section{
   background-color: lavender;
+}
+.contact-form{
+  border: 1px solid black;
+}
+.form-group{
+  color: black;
+}
+.form-control{
+  width: 100%;
+}
+.heading{
+  color: black;
+}
+.name{
+  color: black;
+}
+.contact-form{
+  display:contents;
+  justify-content: center;
 }
